fix: adjust sidebar view on smaller screens

--- a/resources/sass/volt.scss
+++ b/resources/sass/volt.scss
@@ -87,9 +87,17 @@
 @import "volt/forms";
 
 // write your custom styles here!
+
 .sidebar {
     max-width: 320px;
 }
+
+@media (min-width: 992px) {
+    .content {
+        margin-left: 320px;
+    }
+}
+
 .form-control input {
     color: #0a0e17;
 }
